<resources>
    <string name="app_name">StellarControl</string>
    <string name="title">StellarControl</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="about">Acerca De</string>
    <string name="email">Email</string>
    <string name="user">Usuario - </string>
    <string name="password">Contraseña</string>
    <string name="emailRequired">Email Requerido</string>
    <string name="passwordRequired">Contraseña Requerida</string>
    <string name="passwordForgot">¿Contraseña olvidada?</string>
    <string name="metal">Metal</string>
    <string name="cristal">Cristal</string>
    <string name="deuterio">Deuterio</string>
    <string name="energía">Energia</string>
    <string name="vision">Visión general</string>
    <string name="resources">Recursos</string>
    <string name="installations">Instalaciones</string>
    <string name="investigations">Investigaciones</string>
    <string name="hangar">Hangar</string>
    <string name="defense">Defensas</string>
    <string name="fleet">Flota</string>
    <string name="mejorar">Mejorar</string>
    <string name="demoler">Demoler</string>
    <string name="galaxia">Galaxia</string>
    <string name="sistema">Sistema</string>
    <string name="cantidad">Cantidad</string>
    <string name="tiempo">Tiempo de producción:</string>
    <string name="cambiarNombre">Cambiar nombre</string>
    <string name="cambiarContraseña">Cambiar contraseña</string>
    <string name="aplicar">Aplicar</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>
    <string name="confirmarBaja">Para confirmar la baja de su cuenta, debe escribir su contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="enviar">Enviar</string>
    <string name="cuentaExistente">¿Ya tienes cuenta?</string>
    <string name="registrarUsuario">¿Eres nuevo?</string>
    <string name="cantidadConstruccion">Cantidad:</string>
    <string name="nivel">Nivel:</string>
    <string name="diametro">Diametro: </string>
    <string name="posicion">Posicion: </string>
    <string name="temperatura">Temperatura:</string>
    <string name="renombrar">Cambiar nombre</string>
    <string name="abandonar">Abandonar planeta</string>
    <string name="alianza">Alianza</string>
    <string name="crearAlianza">Crear alianza</string>
    <string name="nombreAlianza">Nombre de alianza (4 - 30 caracteres)</string>
    <string name="etiquetaAlianza">Etiqueta de alianza (4 - 8 caracteres)</string>
    <string name="alianzaCreada">Alianza:</string>
    <string name="mensajeCircular">Mensaje circular</string>
    <string name="abandonarAlianza">Abandonar alianza</string>
    <string name="disolverAlianza">Disolver alianza</string>
    <string name="nombreSistema">Planeta:</string>
    <string name="usuarioSistema">Jugador:</string>
    <string name="espionaje">Espionaje</string>
    <string name="informes">Informes de batalla</string>
    <string name="flota">Flota</string>
    <string name="incidencias">Incidencias</string>
    <string name="enviarPara">Nuevo mensaje</string>
    <string name="canal">Canal de comunicación</string>
    <string name="viajar">Viajar</string>
    <string name="forjarAlianza">Crea tu propia alianza</string>
    <string name="construir">Construir</string>
    <string name="investigar">Investigar</string>
    <string name="mision">Mision: </string>
</resources>