<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/header" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/btnEspionaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton"
                android:text="@string/espionaje" />

            <Button
                android:id="@+id/btnInformes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton"
                android:text="@string/informes" />

            <Button
                android:id="@+id/btnInformeFlota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton"
                android:text="@string/flota" />

            <Button
                android:id="@+id/btnInformeAlianza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton"
                android:text="@string/alianza" />

            <Button
                android:id="@+id/btnIncidencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/botton"
                android:text="@string/incidencias" />

        </TableRow>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMensajes"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/draw_button"
            android:gravity="center"
            android:text="nuevo mensaje" />


    </LinearLayout>
</ScrollView>