<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/botton"
            android:gravity="center">

            <TextView
                android:id="@+id/tvPosicionSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/posicion" />

            <TextView
                android:id="@+id/tvPosicionPlaneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <ImageView
                android:id="@+id/imgGalaxyPlanet"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/planet3" />

            <TextView
                android:id="@+id/tvPlanetaSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombreSistema" />

            <TextView
                android:id="@+id/tvNombrePlaneta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvUsuarioSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuarioSistema" />

            <TextView
                android:id="@+id/tvNombreJugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp" />

            <ImageView
                android:id="@+id/imgDesplegarPlaneta"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="25dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/arrow_down" />

        </TableRow>
    </TableLayout>

</LinearLayout>